syntax = "proto3";
package jarvismarketpb;

enum AppType {
    APPTYPE_UNKNOW = 0;
    APPTYPE_NORMAL = 1;
    APPTYPE_SERVICE = 2;
}

message AppInfo {
    string name = 1;
    string author = 2;
    string authorEmail = 3;
    string description = 4;
    repeated string keywords = 5;
    string version = 6;
    bool inDocker = 7;
    AppType type = 8;
}

message RepositoryInfo {
    string name = 1;

    repeated AppInfo apps = 100;
}